# TicketDocumentation

./: .gitignore  .lighthouserc.production.json  README.md  commitlint.config.mjs  lighthouserc.json  package.json  pnpm-lock.yaml  vite.config.ts
.codex/: codex-os.manifest.json  verify.commands
.codex/bootstrap/: package-bootstrap.json
.husky/: commit-msg  pre-commit  pre-push
scripts/: clean-heavy.sh  clean-local.sh  dev-lean.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/migrations/: 001_initial.sql  002_add_app_context.sql
src-tauri/src/: error.rs  lib.rs  main.rs  panel.rs  tray.rs
src-tauri/src/commands/: activities.rs  mod.rs  monitoring.rs  ollama.rs  resolution.rs  settings.rs
src-tauri/src/components/Editor/: DraftPreview.tsx  Editor.tsx  GenerateButton.tsx
src-tauri/src/components/Timeline/: ActivityCard.tsx
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/hooks/: useLlmStream.ts
src-tauri/src/llm/: generate.rs  mod.rs  templates.rs
src-tauri/src/monitor/: mod.rs  poller.rs  sanitizer.rs
src-tauri/src/pattern/: mod.rs  rules.rs
src-tauri/src/stores/: activityStore.ts  resolutionStore.ts  settingsStore.ts
src/hooks/: useActivityStream.ts  useEscapeKey.ts  useLlmStream.test.ts  useLlmStream.ts  useMonitoringStatus.ts  useTauriEvent.ts
src/lib/: constants.ts  tauri.ts  types.ts
src/stores/: activityStore.test.ts  activityStore.ts  resolutionStore.test.ts  resolutionStore.ts  settingsStore.ts  templateStore.ts  toastStore.test.ts  toastStore.ts
(+13 files in other folders)
